[project]
name = "fastapi-wasmer-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "hypercorn>=0.17.3",
]

[tool.uv]
# Require that the package is available for macOS ARM and x86 (Intel).
required-environments = [
    "sys_platform == 'wasix' and platform_machine == 'wasm32'",
]
